fix dashboard gap / paddings

--- a/components/Molecules/DashboardNavigation/styles.module.scss
+++ b/components/Molecules/DashboardNavigation/styles.module.scss
@@ -7,12 +7,6 @@
   min-height: 64px;
 
   @media (min-width: 768px) {
-    padding: 0px 24px;
-
     min-height: 70px;
-  }
-
-  @media (min-width: 1200px) {
-    padding: 0px 30px;
   }
 }
