--- a/components/Organisms/DashboardStatistics/styles.module.scss
+++ b/components/Organisms/DashboardStatistics/styles.module.scss
@@ -18,14 +18,6 @@
 
     @media (min-width: 768px) {
       flex-direction: row;
-
-      gap: 24px;
-      padding-bottom: 24px;
-    }
-
-    @media (min-width: 1200px) {
-      gap: 30px;
-      padding-bottom: 30px;
     }
 
     .block {
@@ -43,14 +35,6 @@
     width: 100%;
 
     gap: 16px;
-
-    @media (min-width: 768px) {
-      gap: 24px;
-    }
-
-    @media (min-width: 1200px) {
-      gap: 30px;
-    }
 
     .chart {
       position: relative;
@@ -73,14 +57,6 @@
     width: 100%;
 
     padding-bottom: 16px;
-
-    @media (min-width: 768px) {
-      padding-bottom: 24px;
-    }
-
-    @media (min-width: 1200px) {
-      padding-bottom: 30px;
-    }
 
     canvas {
       height: 100%;
